--- a/src/main/resources/templates/layout/main_layout.html
+++ b/src/main/resources/templates/layout/main_layout.html
@@ -4,7 +4,7 @@
     <body class="hold-transition skin-blue sidebar-mini">
         <div class="wrapper">
             <header th:replace="fragments/header :: headerFragment"></header>
-            <div>
+            <div class="starter-template text-center py-5 px-3">
                 <div layout:fragment="content"></div>
             </div>
         <!--    <footer th:replace="fragments/footer:: footerFragment"></footer>-->
