--- a/src/main/resources/templates/fragments/config.html
+++ b/src/main/resources/templates/fragments/config.html
@@ -8,10 +8,10 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/starter-template/">
-
+    <title></title>
     <!-- Custom styles for this template -->
-    <link href="../../static/starter-template.css" th:href="@{/resources/static/starter-template.css}" rel="stylesheet">
-    <link href="../../static/signin.css" th:href="@{/resources/static/signin.css}" rel="stylesheet">
+    <link href="../../static/starter-template.css" th:href="@{../../../starter-template.css}" rel="stylesheet">
+    <link href="../../static/signin.css" th:href="@{../../../signin.css}" rel="stylesheet">
 
     <style>
         .bd-placeholder-img {
@@ -28,6 +28,5 @@
             }
         }
     </style>
-
 </head>
 </html>
