--- a/src/main/resources/templates/layout/main_layout.html
+++ b/src/main/resources/templates/layout/main_layout.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
     <head th:replace="fragments/config :: configFragment"></head>
-    <body class="hold-transition skin-blue sidebar-mini">
-        <div class="wrapper">
+    <body><!--class="hold-transition skin-blue sidebar-mini" -->
+        <div class="container"> <!--원래wrapper-->
             <header th:replace="fragments/header :: headerFragment"></header>
-            <div class="starter-template text-center py-5 px-3">
-                <div layout:fragment="content"></div>
+            <div>
+            <div layout:fragment="content"></div>
             </div>
         <!--    <footer th:replace="fragments/footer:: footerFragment"></footer>-->
             <div class="control-sidebar-bg"></div>
-        </div>
+       </div>
     </body>
 </html>
