--- a/src/main/resources/templates/views/contents/main.html
+++ b/src/main/resources/templates/views/contents/main.html
@@ -12,8 +12,8 @@
         }
 
     </style>
-    <br/>
-    <div>
+
+    <div class="starter-template">
         <table>
             <thead>
                 <tr>
