--- a/src/main/resources/templates/views/contents/main.html
+++ b/src/main/resources/templates/views/contents/main.html
@@ -17,7 +17,7 @@
         <table>
             <thead>
                 <tr>
-                    <th>코드</th>
+                    <th>code</th>
                     <th>이름</th>
                 </tr>
             </thead>
