--- a/src/main/resources/templates/views/contents/test_form.html
+++ b/src/main/resources/templates/views/contents/test_form.html
@@ -5,8 +5,21 @@
         <!-- Custom styles for this template -->
         <link href="starter-template.css" th:href="@{/starter-template.css}" rel="stylesheet">
         <div class="starter-template text-center py-5 px-3">
-            <h1>Bootstrap starter template</h1>
-            <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
+            <h2>테스트 게시판</h2>
+
+            <form>
+                <div class="mb-3">
+                    <label for="number" class="form-label">번호</label>
+                    <input type="text" class="form-control" id="number" aria-describedby="emailHelp">
+                </div>
+                <div class="mb-3">
+                    <label for="name" class="form-label">이름</label>
+                    <input type="text" class="form-control" id="name">
+                </div>
+                <a type="button" class="btn btn-primary" th:href="@{/test}">취소</a>
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
+
 
 
         </div>
