--- a/src/main/resources/templates/views/contents/login.html
+++ b/src/main/resources/templates/views/contents/login.html
@@ -8,23 +8,18 @@
         <style>
             body{
                 background-color: #f5f5f5;
-
             }
         </style>
 
-        <form style="padding-top:50%;">
+
+        <form style="padding-top:50%;" th:action="@{/account/loginOk}" method="post">
             <!--<img class="mb-4" src="/docs/5.0/assets/brand/bootstrap-logo.svg" alt="" width="72" height="57">-->
-            <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
-            <label for="inputEmail" class="visually-hidden">Email address</label>
-            <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
-            <label for="inputPassword" class="visually-hidden">Password</label>
-            <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
-            <div class="checkbox mb-3">
-                <label>
-                    <input type="checkbox" value="remember-me"> Remember me
-                </label>
-            </div>
-            <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
+            <h1 class="h3 mb-3 fw-normal">로그인</h1>
+            <label for="inputId" class="visually-hidden">아이디</label>
+            <input type="text" name="userid" id="inputId" class="form-control" placeholder="아이디를 입력하세요" required autofocus>
+            <label for="inputPassword" class="visually-hidden">비밀번호</label>
+            <input type="password" name="userpwd" id="inputPassword" class="form-control" placeholder="비밀번호를 입력하세요" required>
+            <button class="w-100 btn btn-lg btn-primary" type="submit">로그인</button>
             <p class="mt-5 mb-3 text-muted">&copy; 2017–2021</p>
         </form>
     </main>
