--- a/src/main/resources/templates/fragments/config.html
+++ b/src/main/resources/templates/fragments/config.html
@@ -7,13 +7,10 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <meta name="generator" content="">
-    <title th:text="${pageTitle}">Starter Template · Bootstrap v5.0</title>
-
-    <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/starter-template/">
+    <title th:text="${pageTitle}"></title>
 
     <!-- Bootstrap core CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-    <link href="signin.css" th:href="@{/signin.css}" rel="stylesheet">
+    <link rel="stylesheet" th:href="@{/webjars/bootstrap/4.5.2/css/bootstrap.min.css}">
     <style>
         .bd-placeholder-img {
             font-size: 1.125rem;
