--- a/src/main/resources/templates/views/contents/login.html
+++ b/src/main/resources/templates/views/contents/login.html
@@ -1,27 +1,31 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" data-layout-decorate="~{layout/main_layout}">
+<html xmlns:th="http://www.thymeleaf.org" >
 <!-- Custom styles for this template -->
+<head>
+    <link rel="stylesheet" th:href="@{/webjars/bootstrap/4.5.2/css/bootstrap.min.css}">
+    <link href="signin.css" th:href="@{/signin.css}" rel="stylesheet">
+</head>
+<body>
+    <div class="form-signin">
+        <main class="container text-center">
+            <style>
+                body{
+                    background-color: #f5f5f5;
+                }
+            </style>
 
-<div class="form-signin" layout:fragment="content">
 
-    <main class="container text-center">
-        <style>
-            body{
-                background-color: #f5f5f5;
-            }
-        </style>
-
-
-        <form style="padding-top:50%;" th:action="@{/account/loginOk}" method="post">
-            <!--<img class="mb-4" src="/docs/5.0/assets/brand/bootstrap-logo.svg" alt="" width="72" height="57">-->
-            <h1 class="h3 mb-3 fw-normal">로그인</h1>
-            <label for="inputId" class="visually-hidden">아이디</label>
-            <input type="text" name="userid" id="inputId" class="form-control" placeholder="아이디를 입력하세요" required autofocus>
-            <label for="inputPassword" class="visually-hidden">비밀번호</label>
-            <input type="password" name="userpwd" id="inputPassword" class="form-control" placeholder="비밀번호를 입력하세요" required>
-            <button class="w-100 btn btn-lg btn-primary" type="submit">로그인</button>
-            <p class="mt-5 mb-3 text-muted">&copy; 2017–2021</p>
-        </form>
-    </main>
-</div>
+            <form style="padding-top:50%;" th:action="@{/account/loginOk}" method="post">
+                <!--<img class="mb-4" src="/docs/5.0/assets/brand/bootstrap-logo.svg" alt="" width="72" height="57">-->
+                <h1 class="h3 mb-3 fw-normal">로그인</h1>
+                <label for="inputId" class="visually-hidden">아이디</label>
+                <input type="text" name="userid" id="inputId" class="form-control" placeholder="아이디를 입력하세요" required autofocus>
+                <label for="inputPassword" class="visually-hidden">비밀번호</label>
+                <input type="password" name="userpwd" id="inputPassword" class="form-control" placeholder="비밀번호를 입력하세요" required>
+                <button class="w-100 btn btn-lg btn-primary" type="submit">로그인</button>
+                <p class="mt-5 mb-3 text-muted">&copy; 2017–2021</p>
+            </form>
+        </main>
+    </div>
+</body>
 </html>
