header code updated

--- a/src/main/resources/templates/layout/main_layout.html
+++ b/src/main/resources/templates/layout/main_layout.html
@@ -3,7 +3,7 @@
 <head th:replace="fragments/config :: configFragment"></head>
 <body class="hold-transition skin-blue sidebar-mini">
 <div class="wrapper"> <!--class="wrapper"-->
-    <header th:replace="fragments/header :: headerFragment"></header>
+    <header th:replace="fragments/header2 :: headerFragment"></header>
     <div>
         <div layout:fragment="content"></div>
     </div>
