--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -1,6 +1,79 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<header class="main-header" th:fragment="headerFragment">
+<!--<header class="main-header" th:fragment="headerFragment">-->
+    <style>
+        .navbar{width:100%; height:100px;}
+        @font-face{
+            font-family:"gilbert";
+            src:url("/myapp/resources/css/font/Gilbert-Bold Preview5.otf") format("truetype");
+            font-style:normal;
+            font-weight:normal;
+        }
+
+        @font-face{
+            font-family:"lot";
+            src:url("/myapp/resources/css/font/Lot-Regular.otf") format("truetype");
+            font-style:normal;
+            font-weight:normal;
+        }
+
+        @font-face{
+            font-family:"saint";
+            src:url("/myapp/resources/css/font/SaintGeorge-LowercaseStencil.otf") format("truetype");
+            font-style:normal;
+            font-weight:normal;
+        }
+
+        @font-face{
+            font-family:"SCDream5";
+            src:url("/myapp/resources/css/font/SCDream5.otf") format("truetype");
+            font-style:normal;
+            font-weight:normal;
+        }
+
+        @font-face{
+            font-family:"SCDream3";
+            src:url("/myapp/resources/css/font/SCDream3.otf") format("truetype");
+            font-style:normal;
+            font-weight:normal;
+        }
+        @font-face{
+            font-family:"SCDream3";
+            src:url("/myapp/resources/css/font/SCDream3.otf") format("truetype");
+            font-style:normal;
+            font-weight:normal;
+        }
+        @font-face{
+            font-family:"SCDream5";
+            src:url("/myapp/resources/css/font/SCDream5.otf") format("truetype");
+            font-style:normal;
+            font-weight:normal;
+        }
+
+
+
+        .navbar{
+            font-family: 'SCDream5';
+            font-size:20px;
+            max-height:80px;
+
+        }
+        #home{
+            font-family:'lot';
+            height:70px;
+        }
+        #homesLogo span{
+            font-size:50px;
+        }
+
+        .nav-item a:hover{
+            color:#EE8374;
+        }
+
+        .searchBox{
+            display:flex;
+        }
+    </style>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">HOMES</a>
